# strict_json_api

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
src/: document.rs  document_error.rs  document_links.rs  error.rs  json_api.rs  jsonapi.rs  lib.rs  link.rs  macros.rs  pagination.rs  pagination_links.rs  present.rs  relationship.rs  resource.rs  resource_identifier.rs  wrapper.rs
src/documents/: data_document.rs  document.rs  error_document.rs  markers.rs  mod.rs
src/resources/: linkage_resource.rs  mod.rs  request_resource.rs  response_resource.rs
tests/: examples.rs  main.rs
