[package]
name = "strict_json_api"
version = "0.3.5"
edition = "2024"
build = "build.rs"

[dependencies]
crabtime = { version = "1.1.3", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }

[dev-dependencies]
serde_json = "1.0.140"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
